# krx-stock-mcp

./: .env.sample  .gitignore  README.md  cache.py  health_check.py  health_check_entries.json  krx_client.py  main.py  pyproject.toml  schema.py  server.py  utils.py  watcher.py
data/: stock_info_konex.json  stock_info_kosdaq.json  stock_info_kospi.json  stock_price_konex.json  stock_price_kosdaq.json  stock_price_kospi.json
src/: cache.py  krx_client.py  resolver.py  server.py  utils.py  watcher.py
src/descriptions/: get_stock_info_by_date.yaml  get_stock_price_by_date.yaml  loader.py
src/schemas/: schema.py
