[project]
name = "krx-mcp-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastmcp>=2.14.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.11.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tzdata>=2025.2",
]
